fix header height bug on safari

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -462,14 +462,7 @@ pre {
     font-weight: 400;
     font-size: 16px;
     background-color: #FFFFFF;
-    color: #4A4A4A;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0; } }
+    color: #4A4A4A; } }
   @media screen and (max-width: 600px) {
     body {
       font-size: 14px; } }
